<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    android:padding="12dp"
    tools:context=".ui.fragment.HomeFragment">

    <Button
        android:id="@+id/backButton"
        style="@style/TextAppearance.WhoSings.RoundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rankingDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/your_recent_games"
        android:textAppearance="@style/TextAppearance.WhoSings.H2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        />

    <TextView
        android:id="@+id/noItemsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreIndicator"
        android:textAppearance="@style/TextAppearance.WhoSings.Body1"
        android:visibility="gone"
        android:text="@string/no_history_found"/>

    <TextView
        android:id="@+id/scoreIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/recyclerView"
        app:layout_constraintTop_toBottomOf="@id/rankingDescriptionTextView"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/score_indicator"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/recent_game_item"
        />


</androidx.constraintlayout.widget.ConstraintLayout>